--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,15 @@
-*{border: 1px solid #dddddd;
+*{
+	border: 1px solid #dddddd;
 }
 body{
 	font-size: 1.6rem;
 	font-family: 'Circe';
 }
 .row{
-	/* border: 1px solid hsl(258, 82%, 43%); */
+	border: 1px solid hsl(258, 82%, 43%);
+}
+p{
+	border: 1px solid #2d8505;
 }
 section{
 	/* border: 1px solid #dddddd; */
@@ -70,8 +74,12 @@ h4{
 	font-size: 3rem;
 	padding: 3rem 0;
 }
-.what-you-get{
+.wedo{
+	background: linear-gradient(to top, #dddddd, #ffffff);
 	padding: 3rem 0;
+}
+.price{
+	background: linear-gradient(to top, #e2deff, #ffffff);
 }
 .btn{
 	font-size: 1em;
