--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,17 @@
 *{
-	border: 1px solid #dddddd;
+	/* border: 1px solid #dddddd; */
 }
 body{
 	font-size: 1.6rem;
 	font-family: 'Circe';
 }
 .row{
-	border: 1px solid hsl(258, 82%, 43%);
+	padding: 2rem 0;
+	/* border: 1px solid hsl(258, 82%, 43%); */
 }
 p{
-	border: 1px solid #2d8505;
+	height: fit-content;
+	/* border: 1px solid #2d8505; */
 }
 section{
 	/* border: 1px solid #dddddd; */
@@ -44,6 +46,12 @@ h4{
 .text-center{
 	text-align: center;
 }
+.text-space-around{
+	display: flex;
+  flex-flow: row wrap;
+  align-content: space-around;
+}
+
 
 /*---block------*/
 .header-section{
