--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@ p{
 	height: fit-content;
 	/* border: 1px solid #2d8505; */
 }
+img{
+	max-width: 90%;
+}
 section{
 	/* border: 1px solid #dddddd; */
 }
@@ -88,6 +91,10 @@ h4{
 }
 .price{
 	background: linear-gradient(to top, #e2deff, #ffffff);
+}
+.example{
+	padding: 0;
+	margin: 0;
 }
 .btn{
 	font-size: 1em;
