--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,22 @@ h4{
 	font-size: 2rem;
 	text-align: center;
 }
+.price-item__body .noactive, .active{
+	margin: 0;
+    padding: 1rem;
+	padding-bottom: 1rem;
+	text-align: center;
+	border-bottom: 1px dotted #ddd;
+}
+.price-item__body .noactive{
+	color: #9c9c9c;
+	text-decoration: line-through;
+}
+/*.price-item__body .active{
+	padding: 0 1rem;
+	text-align: center;
+	border-bottom: 1px dotted #ddd;
+}*/
 .price-item__footer{
 	background: rgba(157, 208, 107, 0.25);
 	border-top: 1px solid #99cc66;
