--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,107 @@ h4{
 .hidden{
 	display: none;
 }
+
+
+/*==popup form==*/
+
+form{
+	padding: 20px 20px;
+	background-color: #f9f9f9;
+	max-width: 50%;
+	margin: auto;
+	position: relative;
+}
+form input, textarea{
+	outline:none;
+	width: 100%;
+}
+form label{
+	font-size: 1em;
+	font-style: italic;
+}
+form input{
+	height: 1.8em;
+	}
+form input, textarea, select{
+  border-radius: 4px;
+  font-size: 1em; 
+  border: 1px solid #A5A5A5;
+}
+/*form input:focus, textarea:focus{
+  box-shadow: inset 1px 1px 3px -1px #f60;
+}*/
+form button{
+	font-size: 1em;
+	border:0px solid #ccc; /*цвет границы*/
+	border-radius: 4px;
+	background:#fc7a00;  /*цвет фона*/
+	padding:10px 20px; /*внутренние отступы*/
+	/*display:block;*/
+	text-align:center; /*выравнивание текста по центру*/
+	color:#fff;  /*цвет текста*/
+	text-decoration:none;  /*убрать подчёркивание у ссылки*/
+	width:auto;  /*ширина кнопки*/
+	margin:auto;  /*выравнивание кнопки по центру*/
+	-webkit-transition: all 0.5s ease;
+	-moz-transition: all 0.5s ease;
+	transition: all 0.5s ease;
+}
+
+/*==footer form===*/
+
+.footer-section form{
+	background-color: rgba(0,0,0, 0);
+	color: #ccc;
+	max-width: 100%;
+}
+.footer-section input, textarea, select{
+	background-color: rgba(0,0,0, 0);
+	border-radius: 0px;
+	border: 0px solid #A5A5A5;
+	border-bottom: 1px solid #A5A5A5;
+}
+
+
+.error {
+  border: 1px solid #ff8c00;
+  padding: 10px;
+  background: #FFDF97;
+  text-align: left;
+  border-radius: 3px;
+}
+.ok {
+  border: 1px #BCEF89 solid;
+  margin-bottom: 15px;
+  padding: 10px;
+  background: #f5f9fd;
+  text-align: center;
+  border-radius: 3px;
+}
+.field_head{
+	font-size: 1.2em;
+	margin-top: 2em;
+	margin-bottom: 1em;
+}
+.checkbox{
+	width: 16px;
+	height: 16px;
+	margin-right: 10px;
+}
+
+
+.copyright{
+	background-color: #363839;
+	color: #dddddd;
+	font-size: 12px;
+	text-align: center;
+	margin: 0;
+	padding: 5px;
+	border-top: 1px solid #4b4c4d;
+}
+
+/*==buttons==*/
+
 .btn{
 	font-size: 1em;
 	border:0px solid #ccc; /*цвет границы*/
