--- a/css/style.css
+++ b/css/style.css
@@ -166,54 +166,10 @@ h4{
 	color: #cccccc;
 }
 .hidden{
-	display: none;
+	display: none;5845de
 }
 
 
-/*==popup form==*/
-
-form{
-	padding: 20px 20px;
-	background-color: #f9f9f9;
-	max-width: 50%;
-	margin: auto;
-	position: relative;
-}
-form input, textarea{
-	outline:none;
-	width: 100%;
-}
-form label{
-	font-size: 1em;
-	font-style: italic;
-}
-form input{
-	height: 1.8em;
-	}
-form input, textarea, select{
-  border-radius: 4px;
-  font-size: 1em; 
-  border: 1px solid #A5A5A5;
-}
-/*form input:focus, textarea:focus{
-  box-shadow: inset 1px 1px 3px -1px #f60;
-}*/
-form button{
-	font-size: 1em;
-	border:0px solid #ccc; /*цвет границы*/
-	border-radius: 4px;
-	background:#fc7a00;  /*цвет фона*/
-	padding:10px 20px; /*внутренние отступы*/
-	/*display:block;*/
-	text-align:center; /*выравнивание текста по центру*/
-	color:#fff;  /*цвет текста*/
-	text-decoration:none;  /*убрать подчёркивание у ссылки*/
-	width:auto;  /*ширина кнопки*/
-	margin:auto;  /*выравнивание кнопки по центру*/
-	-webkit-transition: all 0.5s ease;
-	-moz-transition: all 0.5s ease;
-	transition: all 0.5s ease;
-}
 
 /*==footer form===*/
 
@@ -245,27 +201,152 @@ form button{
   text-align: center;
   border-radius: 3px;
 }
-.field_head{
+/*.field_head{
 	font-size: 1.2em;
 	margin-top: 2em;
 	margin-bottom: 1em;
-}
-.checkbox{
+}*/
+/*.checkbox{
 	width: 16px;
 	height: 16px;
 	margin-right: 10px;
+}*/
+
+
+/*==popup form==*/
+
+form{
+	padding: 20px 20px;
+	background-color: #f9f9f9;
+	max-width: 50%;
+	margin: auto;
+	position: relative;
+}
+
+#getSite input, #getSite textarea{
+	outline:none;
+	width: 100%;
+}
+
+#getSite input{
+	height: 1.8em;
+	}
+#getSite input, #getSite textarea, #getSite select{
+  border-radius: 4px;
+  font-size: 1em; 
+  border: 1px solid #A5A5A5;
+}
+
+#getSite .go{ /*кнопка отправить*/
+	font-size: 1em;
+	border:0px solid #ccc; /*цвет границы*/
+	border-radius: 4px;
+	background:#fc7a00;  /*цвет фона*/
+	padding:10px 20px; /*внутренние отступы*/
+	/*display:block;*/
+	text-align:center; /*выравнивание текста по центру*/
+	color:#fff;  /*цвет текста*/
+	text-decoration:none;  /*убрать подчёркивание у ссылки*/
+	width:auto;  /*ширина кнопки*/
+	margin:auto;  /*выравнивание кнопки по центру*/
+	-webkit-transition: all 0.5s ease;
+	-moz-transition: all 0.5s ease;
+	transition: all 0.5s ease;
+}
+/*кнопка закрытия формы*/
+/*.mfp-close { 
+	padding: 1rem;
+    margin: 0;
+    line-height: 0;
+    height: 3rem;
+}*/
+#getSite label{
+	font-size: 2rem;
+	/*font-style: italic;*/
+}
+
+#getSite ul{
+  margin: 0;
+}
+
+#getSite ul li{
+  /*color: #e76d98;*/
+  display: block;
+  position: relative;
+  float: left;
+  width: 100%;
+  /*height: 100px;*/
+  /*border-bottom: 1px solid #333;*/
+}
+
+#getSite ul li input[type=radio]{
+  position: absolute;
+  visibility: hidden;
+}
+
+#getSite ul li label{
+  color: #a7a7a7;
+  display: block;
+  position: relative;
+  font-weight: 300;
+  font-size: 1.35em;
+  padding: 25px 25px 25px 80px;
+  /*margin: 10px auto;*/
+  height: 30px;
+  z-index: 9;
+  cursor: pointer;
+  -webkit-transition: all 0.25s linear;
+}
+
+#getSite ul li:hover label{
+	color: #3f3f3f;
+}
+
+#getSite ul li .check{
+  display: block;
+  position: absolute;
+  border: 2px solid #AAAAAA;
+  border-radius: 100%;
+  height: 25px;
+  width: 25px;
+  top: 30px;
+  /*left: 20px;*/
+	z-index: 5;
+	transition: border .25s linear;
+	-webkit-transition: border .25s linear;
+}
+
+#getSite ul li:hover .check {
+  border: 2px solid #3f3f3f;
+}
+
+#getSite ul li .check::before {
+  display: block;
+  position: absolute;
+	content: '';
+  border-radius: 100%;
+  height: 10px;
+  width: 10px;
+  top: 5px;
+	left: 5px;
+  margin: auto;
+	transition: background 0.25s linear;
+	-webkit-transition: background 0.25s linear;
+}
+
+#getSite input[type=radio]:checked ~ .check {
+  border: 2px solid #3f3f3f
+}
+
+#getSite input[type=radio]:checked ~ .check::before{
+  background: #3f3f3f;
+}
+
+#getSite input[type=radio]:checked ~ label{
+  color: #3f3f3f;
 }
 
 
-.copyright{
-	background-color: #363839;
-	color: #dddddd;
-	font-size: 12px;
-	text-align: center;
-	margin: 0;
-	padding: 5px;
-	border-top: 1px solid #4b4c4d;
-}
 
 /*==buttons==*/
 
@@ -285,3 +366,14 @@ form button{
 	-moz-transition: all 0.5s ease;
 	transition: all 0.5s ease;
 }
+
+
+/*.copyright{
+	background-color: #363839;
+	color: #dddddd;
+	font-size: 12px;
+	text-align: center;
+	margin: 0;
+	padding: 5px;
+	border-top: 1px solid #4b4c4d;
+}*/
