--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,6 @@ h4{
 }
 .div-line{
 	display: inline-block;
-    text-align: ;
     width: 20%;
     /* height: 5px; */
     border-bottom: 0.1em solid #99cc66;
@@ -166,7 +165,7 @@ h4{
 	color: #cccccc;
 }
 .hidden{
-	display: none;5845de
+	display: none;
 }
 
 
@@ -179,10 +178,12 @@ h4{
 	max-width: 100%;
 }
 .footer-section input, textarea, select{
-	background-color: rgba(0,0,0, 0);
+	background-color: rgba(0,0,0, 0) !important;
 	border-radius: 0px;
 	border: 0px solid #A5A5A5;
 	border-bottom: 1px solid #A5A5A5;
+	width:98%;
+	outline-width: 0;
 }
 
 
@@ -237,22 +238,6 @@ form{
   border: 1px solid #A5A5A5;
 }
 
-#getSite .go{ /*кнопка отправить*/
-	font-size: 1em;
-	border:0px solid #ccc; /*цвет границы*/
-	border-radius: 4px;
-	background:#fc7a00;  /*цвет фона*/
-	padding:10px 20px; /*внутренние отступы*/
-	/*display:block;*/
-	text-align:center; /*выравнивание текста по центру*/
-	color:#fff;  /*цвет текста*/
-	text-decoration:none;  /*убрать подчёркивание у ссылки*/
-	width:auto;  /*ширина кнопки*/
-	margin:auto;  /*выравнивание кнопки по центру*/
-	-webkit-transition: all 0.5s ease;
-	-moz-transition: all 0.5s ease;
-	transition: all 0.5s ease;
-}
 /*кнопка закрытия формы*/
 /*.mfp-close { 
 	padding: 1rem;
@@ -262,6 +247,7 @@ form{
 }*/
 #getSite label{
 	font-size: 2rem;
+	display: block;
 	/*font-style: italic;*/
 }
 
@@ -364,10 +350,17 @@ form{
 	margin:auto;  /*выравнивание кнопки по центру*/
 	-webkit-transition: all 0.5s ease;
 	-moz-transition: all 0.5s ease;
-	transition: all 0.5s ease;
+	transition: all 0.3s ease;
 }
-
-
+#sendMsg .btn{
+	background:rgba(0,0,0, 0);
+	border:1px solid #a5a5a5;
+}
+#sendMsg .btn:hover{
+	background:rgba(0,0,0, 0);
+	border:1px solid #a5a5a5;
+	box-shadow: 0 0 10px rgba(0,0,0,0.5)
+}
 /*.copyright{
 	background-color: #363839;
 	color: #dddddd;
