--- a/css/style.css
+++ b/css/style.css
@@ -233,6 +233,9 @@ h4{
   text-align: left;
   border-radius: 3px;
 }
+#sendMsg .error{
+	background: rgba(0, 0, 0, 0);
+}
 .ok {
   border: 1px #BCEF89 solid;
   margin-bottom: 15px;
