--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ h4{
 	margin-bottom: 4rem;
 	border: 1px solid #99cc66;
 	border-radius: 10px;
-	box-shadow: 0px 1px 11px #989898;
+	/* box-shadow: 0px 1px 11px #989898; */
 }
 
 .price-item__header{
@@ -402,7 +402,7 @@ form{
 	border-radius: 4px;
 	background:#339933;  /*цвет фона*/
 	padding: 1rem 6rem;
-	/*display:block;*/
+	box-shadow: 1px 1px 2px rgba(0,0,0,0.35);
 	text-align:center; /*выравнивание текста по центру*/
 	color:#fff;  /*цвет текста*/
 	text-decoration:none;  /*убрать подчёркивание у ссылки*/
@@ -412,14 +412,19 @@ form{
 	-moz-transition: all 0.5s ease;
 	transition: all 0.3s ease;
 }
+.btn:hover{
+	box-shadow: 3px 3px 4px rgba(0,0,0,0.5);
+}
+
 #sendMsg .btn{
 	background:rgba(0,0,0, 0);
 	border:1px solid #a5a5a5;
+	box-shadow: 1px 1px 2px rgba(0,0,0,0.5)
 }
 #sendMsg .btn:hover{
 	background:rgba(0,0,0, 0);
 	border:1px solid #a5a5a5;
-	box-shadow: 0 0 10px rgba(0,0,0,0.5)
+	box-shadow: 3px 3px 4px rgba(0,0,0,0.5)
 }
 /*.copyright{
 	background-color: #363839;
