--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,14 @@ h4{
 	padding: 3rem 0;
 	font-size: 2rem;
 }
+.wedo-fone{
+	width: 100%;
+    height: 130%;
+    position: absolute;
+    /* opacity: 0.5; */
+    /* left: 20%; */
+    /* margin-top: 10rem; */
+}
 .wedo p{
 	padding-bottom: 2rem;
 	margin-bottom: 0;
@@ -173,9 +181,19 @@ h4{
 }
 
 .price-section{
+	display: flex;
+    justify-content: center;
 	background: linear-gradient(to top, #e2deff, #ffffff);
 	/* background: url(img/adaptive.png); */
 	/*padding-bottom: 4rem;*/
+}
+.price-fone{
+	width: 60%;
+    height: 80%;
+    position: absolute;
+    opacity: 0.03;
+	/* left: 10%; */
+	margin-top: 10rem;
 }
 .price-item{
 	margin-bottom: 4rem;
@@ -185,11 +203,15 @@ h4{
 }
 
 .price-item__header{
+	display: flex;
+    justify-content: center;
+    align-items: center;
 	background: #bcef89;
 	border-bottom: 1px solid #99cc66;
 	border-radius: 10px 10px 0 0;
 	font-size: 2rem;
-	text-align: center;
+	/* text-align: center; */
+	height: 5rem;
 }
 .price-item__body{
 	/* background: #fdefdd; */
@@ -212,11 +234,14 @@ h4{
 	border-bottom: 1px dotted #ddd;
 }*/
 .price-item__footer{
+	display: flex;
+    justify-content: center;
+    align-items: center;
 	background: #bcef89;
 	border-top: 1px solid #99cc66;
 	border-radius: 0 0 10px 10px;
 	font-size: 2rem;
-	text-align: center;
+	/* text-align: center; */
 }
 
 .footer-section{
@@ -284,6 +309,8 @@ form{
 	max-width: 50%;
 	margin: auto;
 	position: relative;
+	margin-top: 1rem;
+    border-radius: 1rem;
 }
 
 #getSite input, #getSite textarea{
