--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,26 @@ h4{
 	color: #FF8401;
 }
 
+.icon{
+	margin-right: 1rem;
+    width: 2rem;
+    height: 1.5rem;
+	border: 1px solid #ffffff;
+	border-radius: 3px;
+	overflow: hidden;
+}
+.icon-r{
+	-moz-transform: rotate(45deg); /* Для Firefox */
+    -ms-transform: rotate(45deg); /* Для IE */
+    -webkit-transform: rotate(45deg); /* Для Safari, Chrome, iOS */
+    -o-transform: rotate(45deg); /* Для Opera */
+    transform: rotate(45deg);
+	margin-top: -1.1rem;
+    width: 1.8rem;
+    height: 1.8rem;
+	border: 1px solid #ffffff;
+	border-radius: 2px;
+}
 .contacts {
 	display: flex;
     justify-content: flex-end;
@@ -160,6 +180,12 @@ h4{
 	padding-bottom: 2rem;
 	margin-bottom: 0;
 }
+.after-line{
+	width: 100%;
+	height: 2px;
+	border: 1px solid #ff8000;
+}
+
 
 .example{
 	padding: 0;
