--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ img{
 }
 section{
 	/* border: 1px solid #dddddd; */
-	padding-bottom: 4rem;
+	padding: 4rem;
 }
 h1, h2, h3, h4, h5, h6 {
 	margin: 0;
@@ -129,7 +129,28 @@ h4{
 
 .text-header{
 	justify-content: center;
+	position: relative;
+	margin: 4rem auto;
 }
+.run_line{
+	padding: 0;
+}
+.run_line:hover:before{
+	width: 100%;
+    left: 0;
+}
+.run_line::before{
+	display: inline-block;
+	content: '';
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    width: 20%;
+    height: 2px;
+    background-color: #fc7356;
+    transition: 0.2s;
+}
+
 .priveleges{
 	font-size: 3rem;
 	/*padding: 3rem 0;*/
