--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,10 @@ h4{
 	position: relative;
 	margin: 4rem auto;
 }
+.text-desc{
+	margin: 3rem auto;
+	font-size: 2.5rem;
+}
 .run_line{
 	padding: 0;
 }
@@ -197,6 +201,16 @@ h4{
     /* left: 20%; */
     /* margin-top: 10rem; */
 }
+.portfolio{
+	background: #cecece;
+	background: linear-gradient(to top, rgba(0,0,0, 0), #ddd);
+}
+.portfolio-fone{
+	width: 100%;
+    height: 70%;
+    position: absolute;
+    opacity: 0.2;
+}
 .wedo p{
 	padding-bottom: 2rem;
 	margin-bottom: 0;
@@ -212,6 +226,12 @@ h4{
 	padding: 0;
 	margin: 0;
 }
+.example img{
+	box-shadow: 0px 0px 9px #989898;
+	padding: 0;
+	margin: 2rem;
+}
+
 .ex-max{
 	width: 80%;
   margin: auto;
@@ -473,19 +493,25 @@ form{
 
 .btn{
 	font-size: 1em;
-	border:0px solid #ccc; /*цвет границы*/
+	border:0px solid #ccc;
 	border-radius: 4px;
-	background:#339933;  /*цвет фона*/
+	background:#339933;
 	padding: 1rem 6rem;
 	box-shadow: 1px 1px 2px rgba(0,0,0,0.35);
 	text-align:center; /*выравнивание текста по центру*/
-	color:#fff;  /*цвет текста*/
+	color:#fff;
 	text-decoration:none;  /*убрать подчёркивание у ссылки*/
 	width:auto;  /*ширина кнопки*/
 	margin:auto;  /*выравнивание кнопки по центру*/
 	-webkit-transition: all 0.5s ease;
 	-moz-transition: all 0.5s ease;
 	transition: all 0.3s ease;
+}
+.btn-whatsapp{
+	display: none;
+	background:rgba(0, 0, 0, 0);
+	border:1px solid #ccc;
+	font-family: Arial;
 }
 .btn:hover{
 	box-shadow: 3px 3px 4px rgba(0,0,0,0.5);
